[IMP] website_hr_recruitment: template improvement
This commit includes additional template improvements:

- Dropdown filters have been optimised in order to have a better design
in small viewports.

- A 'Separators' option has been added, including an instance of the
Separator snippet for each job entry.

- A 'Shadows' customise option has been created, giving the possibility
to show shadows on each job entry.

- Whenever the 'Grid Layout' is applied, a 'Truncate Text' customise
option can be selected.

- A 'Color on Hover' customise option has been included, filling the
job entry css colour with the theme primary colour, on hover.

- Links to job details pages are now given only to the headers of each
job entry.

- Job description in each entry of the '/jobs' page is now underneath
the job place and date paragraph.

- Now is not possible to add snippets inside the job description field,
both in '/jobs' and the job detail page. However, in the job detail
page, snippets can be added either above or below the job description
text field.

task-2406626

--- a/addons/website_hr_recruitment/static/src/scss/website_hr_recruitment.scss
+++ b/addons/website_hr_recruitment/static/src/scss/website_hr_recruitment.scss
@@ -1,36 +1,27 @@
 .o_website_hr_recruitment_jobs_list {
-    #jobs_grid_left {
+    #jobs_grid {
+        .o_job_infos {
+            .fa {
+                color: theme-color('secondary');
+                margin-right: .5rem;
+            }
+        }
+        .card {
+            padding: $card-spacer-x;
+            &, * {
+                transition: all .1s;
+            }
+            &:hover {
+                box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+            }
+        }
+    }
+    #jobs_grid_right {
         ul.flex-column > li.nav-item > a {
             padding: .5rem 1rem;
             border-radius: 0.125rem;
         }
     }
-    .card {
-        padding: 15px;
-        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.17);
-
-        &:hover {
-            transition: box-shadow 0.3s cubic-bezier(0.55, 0, 0.1, 1);
-            box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.05);
-        }
-        .o_job_infos {
-            .fa {
-                color: map-get($theme-colors, 'primary');
-                margin-right: 8px;
-            }
-        }
-    }
-    .o_recruitment_not_card {
-        border-radius: 1.25rem;
-        word-break: break-word;
-        transition: .3s;
-
-        &:hover {
-            box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.05);
-        }
-
-    }
-
     .o_website_hr_recruitment_job_description {
         //The ellipsis may not be supported on all platforms, the text will just break for them
         max-height: 60px; //Limit to 3 lines
@@ -77,10 +68,6 @@
             color: theme-color('primary');
         }
     }
-}
-
-.o_hr_index_banner {
-    background: linear-gradient(150deg, #875a7b 20%, #62495b 80%) !important;
 }
 
 .s_image_gallery {
