minor fixes: color, manage esc key

--- a/addons/analytic/static/src/js/analytic_json/analytic_json.scss
+++ b/addons/analytic/static/src/js/analytic_json/analytic_json.scss
@@ -18,6 +18,9 @@
         .o_analytic_status_orange {
             background-color: $o-warning;
         }
+        .o_analytic_status_gray {
+            background-color: $gray-100;
+        }
     }
 
 }
