--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -213,7 +213,7 @@
                                 <table class="table table-sm" style="page-break-inside: avoid;">
                                     <t>
                                         <tr class="border-black">
-                                            <td><b><strong>Untaxed amount</strong></b></td>
+                                            <td><strong>Untaxed Amount</strong></td>
                                             <td class="text-end">
                                                 <span t-esc="o.currency_id.symbol"/>
                                                 <span
@@ -224,24 +224,40 @@
                                         </tr>
                                         <t>
                                             <tr>
-                                                <td><strong>Total tax amount</strong></td>
-                                                <td class="text-end">
-                                                    <span t-esc="o.currency_id.symbol"/>
-                                                    <span
-                                                            t-att-class="oe_subtotal_footer_separator"
-                                                            t-esc="'%.2f'% o.invoice_early_pay_tax_after_discount"
-                                                    />
-                                                </td>
+                                                <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
+                                                    <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
+                                                    <t t-foreach="tax_totals['groups_by_subtotal'][subtotal_to_show]" t-as="amount_by_group">
+                                                        <tr>
+                                                            <t t-if="len(tax_totals['groups_by_subtotal'][subtotal_to_show]) > 1">
+                                                                <td>
+                                                                    <span t-esc="amount_by_group['tax_group_name']"/>
+                                                                    <span class="text-nowrap"> on
+                                                                        <t t-esc="amount_by_group['formatted_tax_group_base_amount']"/>
+                                                                    </span>
+                                                                </td>
+                                                                <td class="text-end o_price_total">
+                                                                    <span class="text-nowrap" t-esc="amount_by_group['formatted_discounted_amount_tax_group']"/>
+                                                                </td>
+                                                            </t>
+                                                            <t t-else="">
+                                                                <td><span class="text-nowrap" t-esc="amount_by_group['tax_group_name']"/></td>
+                                                                <td class="text-end o_price_total">
+                                                                    <span class="text-nowrap" t-esc="amount_by_group['formatted_tax_group_amount']" />
+                                                                </td>
+                                                            </t>
+                                                        </tr>
+                                                    </t>
+                                                </t>
                                             </tr>
                                         </t>
-                                        </t>
-                                            <tr class="border-black o_total">
-                                                <td><b><strong>Total</strong></b></td>
-                                                <td class="text-end">
-                                                    <span t-esc="o.currency_id.symbol"/>
-                                                    <span t-esc="'%.2f'% o.invoice_early_pay_amount_after_discount"/>
-                                                </td>
-                                            </tr>
+                                    </t>
+                                        <tr class="border-black o_total">
+                                            <td><b><strong>Total</strong></b></td>
+                                            <td class="text-end">
+                                                <span t-esc="o.currency_id.symbol"/>
+                                                <span t-esc="'%.2f'% o.invoice_early_pay_amount_after_discount"/>
+                                            </td>
+                                        </tr>
                                 </table>
                             </div>
                         </div>
