--- a/addons/web_editor/static/src/js/editor/odoo-editor/src/style.scss
+++ b/addons/web_editor/static/src/js/editor/odoo-editor/src/style.scss
@@ -191,7 +191,7 @@
 
 .oe-powerbox-wrapper {
     position: absolute;
-    z-index: 1051;
+    z-index: $zindex-modal;
     border: black;
     background-color: white;
     max-height: 40vh;
