--- a/addons/account/views/account_payment_term_views.xml
+++ b/addons/account/views/account_payment_term_views.xml
@@ -109,31 +109,36 @@
                             <field name="has_early_payment"/>
                             <label for="has_early_payment"/>
                             <div attrs="{'invisible':[('has_early_payment','=',False)]}">
-                                <group>
-                                    <group>
-                                        <div class="o_row">
-                                            <label for="percentage_to_discount"/>
-                                            <field name="percentage_to_discount"/>
-                                            <span class="o_form_label oe_inline">%</span>
-                                        </div>
-                                    </group>
-                                </group>
-                                <group>
-                                    <group>
-                                        <div class="o_row">
-                                            <label for="discount_computation"/>
-                                            <field name="discount_computation"/>
-                                        </div>
-                                    </group>
-                                </group>
-                                <group>
-                                    <div colspan="2">
-                                        <label for="discount_time_availability"/>
-                                        <field name="discount_days" class="oe_inline"/>
-                                        <label for="discount_time_availability" string=""/>
-                                        <field name="discount_time_availability" class="oe_inline"/>
+                                <div class="row mt-2">
+                                    <div class="col-2">
+                                        <strong><label for="percentage_to_discount"/></strong>
                                     </div>
-                                </group>
+                                    <div class="col-1">
+                                        <field name="percentage_to_discount"/>
+                                    </div>
+                                    <div class="col-1 oe_inline">
+                                        <span>%</span>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <strong><label for="discount_computation"/></strong>
+                                    </div>
+                                    <div class="col-4">
+                                        <field name="discount_computation"/>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <strong><label for="discount_time_availability"/></strong>
+                                    </div>
+                                    <div class="col-1">
+                                        <field name="discount_days"/>
+                                    </div>
+                                    <div class="col-3">
+                                        <field name="discount_time_availability"/>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </sheet>
