--- a/addons/auth_oauth/views/res_users_views.xml
+++ b/addons/auth_oauth/views/res_users_views.xml
@@ -17,4 +17,21 @@
                 </xpath>
             </field>
         </record>
+
+        <record id="identity_check_wizard" model="ir.ui.view">
+            <field name="model">res.users.identitycheck.oauth</field>
+            <field name="inherit_id" ref="base.identity_check_wizard"/>
+            <field name="arch" type="xml">
+                <field name="oauth_uid" invisible="True"/>
+                <xpath expr="//a[@href='/web/reset_password/']" position="replace">
+                    <span attrs="{'invisible': [('oauth_uid', '=', False)]}">
+                        <a href="/web/reset_password/" class="btn btn-link" role="button">Get a new password?</a>
+                    </span>
+                    <span attrs="{'invisible': [('oauth_uid', '!=', False)]}">
+                        <a href="/web/reset_password/" class="btn btn-link" role="button">Forgot password?</a>
+                    </span>
+                </xpath>
+                </form>
+            </field>
+        </record>
 </odoo>
