--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -215,10 +215,9 @@
                                         <tr class="border-black">
                                             <td><strong>Untaxed Amount</strong></td>
                                             <td class="text-end">
-                                                <span t-esc="o.currency_id.symbol"/>
                                                 <span
                                                     t-att-class="oe_subtotal_footer_separator"
-                                                    t-esc="'%.2f'% o.invoice_early_pay_untaxed_amount_after_discount"
+                                                    t-esc="o.get_formatted_early_pay_untaxed_amount_after_discount()"
                                                 />
                                             </td>
                                         </tr>
@@ -254,8 +253,7 @@
                                         <tr class="border-black o_total">
                                             <td><b><strong>Total</strong></b></td>
                                             <td class="text-end">
-                                                <span t-esc="o.currency_id.symbol"/>
-                                                <span t-esc="'%.2f'% o.invoice_early_pay_amount_after_discount"/>
+                                                <span t-esc="o.get_formatted_early_pay_amount_after_discount()"/>
                                             </td>
                                         </tr>
                                 </table>
