[FIX] web: add display:contents to wrapper div in fields
With the new views in owl, we wrapped every field in a div with the
class o_field_widget. This is a good thing in general, but it has the
issue that before this commit, the display property was set to
inline-block, in all cases.

With this commit, we set it to 'contents', which means that it will
simply get the correct display value from its content.

--- a/addons/web/static/src/legacy/scss/fields.scss
+++ b/addons/web/static/src/legacy/scss/fields.scss
@@ -61,7 +61,9 @@
 
 .o_field_widget {
     // Default display and alignment of widget and internal <input/>
-    &, input.o_input {
+    text-align: inherit;
+
+    input.o_input {
         display: inline-block;
         text-align: inherit;
     }
