--- a/addons/sale_stock/views/sale_order_views.xml
+++ b/addons/sale_stock/views/sale_order_views.xml
@@ -125,8 +125,8 @@
                     <field name="move_ids" invisible="1"/>
                     <field name="qty_to_deliver" invisible="1"/>
                     <field name="is_mto" invisible="1"/>
-                    <field name="display_qty_widget" invisible="1"/>
-                    <widget name="qty_at_date_widget" width="20px"/>
+                    <field name="display_qty_widget" invisible="0"/>
+                    <widget name="qty_at_date_widget"/>
                 </xpath>
             </field>
         </record>
