[FIX] web_editor: ensure link preview placeholder on empty label
When opening the link tools with a collapsed selection, we have an empty
link, which is ugly with its dashed border around an element of width 0.
This inserts a placeholder character "_" in the same style as the
Powerbox placeholder, when the link is empty.

task-2921844

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -443,6 +443,10 @@ body:not(.editor_has_snippets) {
         inset: -5px;
         pointer-events: none;
     }
+    &:empty::after {
+        content: '_';
+        opacity: .4px;
+    }
 }
 
 // ANIMATIONS
