--- a/addons/mail/wizard/mail_compose_message_views.xml
+++ b/addons/mail/wizard/mail_compose_message_views.xml
@@ -16,6 +16,7 @@
                         <field name="is_log" invisible="1"/>
                         <field name="parent_id" invisible="1"/>
                         <field name="mail_server_id" invisible="1"/>
+                        <field name="lang" invisible="1"/>
                         <!-- visible wizard -->
                         <field name="email_from"
                             attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>
@@ -36,6 +37,12 @@
                         <field name="body" class="oe-bordered-editor" placeholder="Write your message here..." options="{'style-inline': true}" attrs="{'readonly': [('can_edit_body', '=', False)]}" force_save="1"/>
                         <group col="4">
                             <field name="attachment_ids" widget="many2many_binary" string="Attach a file" nolabel="1" colspan="2"/>
+                            <field name="attachments_widget"
+                                   widget="mail_attachments_widget"
+                                   string="Attach a file"
+                                   nolabel="1"
+                                   colspan="2"
+                            />
                             <field name="template_id" string="Load template" options="{'no_create': True}"
                                 context="{'default_model': model, 'default_body_html': body, 'default_subject': subject}"/>
                         </group>
